# rstudio-launcher-plugin-sdk

./: .gitignore  CMakeGlobals.txt  CMakeLists.txt  Dockerfile.rockylinux-x86_64  Jenkinsfile  NEWS.md  NOTICE  README.md
docs/: .gitignore
plugins/Local/: CMakeLists.txt
plugins/Local/include/: LocalConstants.hpp  LocalError.hpp  LocalJobRepository.hpp  LocalJobRunner.hpp  LocalJobSource.hpp  LocalOptions.hpp  LocalPluginApi.hpp  LocalResourceStream.hpp  LocalSecureCookie.hpp  SingularityPluginApi.hpp
plugins/Local/include/job_store/: LocalJobStorage.hpp
plugins/Local/src/: LocalError.cpp  LocalJobRepository.cpp  LocalJobRunner.cpp  LocalJobSource.cpp  LocalMain.cpp  LocalOptions.cpp  LocalPluginApi.cpp  LocalResourceStream.cpp  LocalSecureCookie.cpp
plugins/Local/src/job_store/: LocalJobStorage.cpp
plugins/PyQuickStart/: CMakeLists.txt  QuickStartMain.py  README.md  bindings.cpp
plugins/QuickStart/: CMakeLists.txt
plugins/QuickStart/include/: QuickStartJobRepository.hpp  QuickStartJobSource.hpp  QuickStartJobStatusWatcher.hpp  QuickStartOptions.hpp  QuickStartPluginApi.hpp  QuickStartResourceStream.hpp
plugins/QuickStart/src/: QuickStartJobRepository.cpp  QuickStartJobSource.cpp  QuickStartJobStatusWatcher.cpp  QuickStartMain.cpp  QuickStartOptions.cpp  QuickStartPluginApi.cpp  QuickStartResourceStream.cpp
plugins/Singularity/: CMakeLists.txt
plugins/Singularity/containers/: .gitignore  Singularity.r-3.6.0-centos7-x86_64.def
plugins/Singularity/include/: SingularityOptions.hpp  SingularityPluginApi.hpp
plugins/Singularity/src/: SingularityMain.cpp  SingularityOptions.cpp  SingularityPluginApi.cpp
sdk/: CMakeLists.txt
sdk/include/: AbstractMain.hpp  AbstractPluginApi.hpp  Error.hpp  NonCopyable.hpp  Noncopyable.hpp  Noninheritable.hpp  Optional.hpp  PImpl.hpp  SafeConvert.hpp
sdk/include/api/: AbstractOutputStream.hpp  AbstractPluginApi.hpp  IJobSource.hpp  Job.hpp  Request.hpp  Response.hpp  ResponseTypes.hpp
sdk/include/api/stream/: AbstractMultiStream.hpp  AbstractOutputStream.hpp  AbstractResourceStream.hpp  AbstractTimedResourceStream.hpp  FileOutputStream.hpp  IDataStream.hpp
sdk/include/comms/: AbstractLauncherCommunicator.hpp
sdk/include/jobs/: AbstractJobRepository.hpp  AbstractJobStatusWatcher.hpp  AbstractTimedJobStatusWatcher.hpp  JobRepository.hpp  JobStatusNotifier.hpp
sdk/include/json/: Json.hpp  JsonUtils.hpp
sdk/include/logging/: FileLogDestination.hpp  ILogDestination.hpp  Logger.hpp  StderrLogDestination.hpp  SyslogDestination.hpp
sdk/include/options/: AbstractUserProfiles.hpp  BasicOptions.hpp  Options.hpp
sdk/include/system/: Asio.hpp  Crypto.hpp  DateTime.hpp  FilePath.hpp  PosixSystem.hpp  Process.hpp  User.hpp
sdk/include/utils/: FileUtils.hpp  Functionals.hpp  MutexUtils.hpp
sdk/src/: AbstractMain.cpp  Error.cpp  SafeConvert.hpp
sdk/src/api/: AbstractMultiStream.cpp  AbstractMultiStream.hpp  AbstractOutputStream.cpp  AbstractPluginApi.cpp  Constants.cpp  Constants.hpp  Job.cpp  JobStatusStream.cpp  JobStatusStream.hpp  Request.cpp  Response.cpp  ResponseTypes.cpp  StreamManager.cpp  StreamManager.hpp
sdk/src/api/stream/: AbstractMultiStream.cpp  AbstractOutputStream.cpp  AbstractResourceStream.cpp  AbstractTimedResourceStream.cpp  FileOutputStream.cpp  JobStatusStream.cpp  JobStatusStream.hpp  JobStatusStreamManager.cpp  JobStatusStreamManager.hpp  OutputStreamManager.cpp  OutputStreamManager.hpp  ResourceStreamManager.cpp  ResourceStreamManager.hpp
sdk/src/api/streams/: OutputStreamManager.cpp
sdk/src/api/tests/: CMakeLists.txt  JobTests.cpp  RequestTests.cpp  ResponseTests.cpp
sdk/src/comms/: AbstractCommunicator.cpp  AbstractCommunicator.hpp  AbstractLauncherCommunicator.cpp  AbstractLauncherCommunicator.hpp  MessageHandler.cpp  MessageHandler.hpp  StdIOLauncherCommunicator.cpp  StdIOLauncherCommunicator.hpp
sdk/src/comms/tests/: AbstractCommunicatorTests.cpp  CMakeLists.txt  MessageHandlerTests.cpp  run-tests.sh
sdk/src/jobs/: AbstractJobRepository.cpp  AbstractJobStatusWatcher.cpp  AbstractTimedJobStatusWatcher.cpp  JobPruner.cpp  JobPruner.hpp  JobRepository.cpp  JobStatusNotifier.cpp
sdk/src/jobs/tests/: CMakeLists.txt  JobPrunerTests.cpp  JobRepositoryTests.cpp  JobStatusNotifierTests.cpp  TimedJobStatusWatcherTests.cpp
sdk/src/json/: Json.cpp  JsonUtils.cpp
sdk/src/logging/: FileLogDestination.cpp  Logger.cpp  StderrDestination.cpp  StderrLogDestination.cpp  StderrLogDestination.hpp  SyslogDestination.cpp  SyslogDestination.hpp
sdk/src/options/: AbstractUserProfiles.cpp  BasicOptions.cpp  Options.cpp
sdk/src/options/tests/: BasicOptionsTests.cpp  CMakeLists.txt  CmdLineConflictOptionsTests.cpp  CmdLineOptionsTests.cpp  CustomOptions1Tests.cpp  CustomOptions2Tests.cpp  EmptyOptionsTests.cpp  ExtraOptionsTests.cpp  InvalidValueOptionsTests.cpp  LogLevelConflict1Tests.cpp  LogLevelConflict2Tests.cpp  LogLevelConflict3Tests.cpp  MissingOptionalOptionsTests.cpp  MissingRequiredOptionsTests.cpp  UserProfileTests.cpp  options-tests.sh  run-tests.sh
sdk/src/options/tests/conf-files/: Basic.conf  CmdLineConflict.conf  Extra.conf  InvalidValue.conf  LogLevelConflict1.conf  LogLevelConflict2.conf  LogLevelConflict3.conf  MissingOptional.conf
sdk/src/options/tests/profile-files/: badGroup.profiles.conf  badInt.profiles.conf  badList.profiles.conf  badMap.profiles.conf  complex.profiles.conf  (+1 more)
sdk/src/system/: Asio.cpp  Crypto.cpp  DateTime.cpp  DateTime.hpp  FilePath.cpp  PosixSystem.cpp  PosixSystem.hpp  PosixSystemUtils.cpp  PosixSystemUtils.hpp  Process.cpp  ReaderWriterMutex.cpp  ReaderWriterMutex.hpp  User.cpp
sdk/src/system/tests/: AsioTimerTests.cpp  AsyncChildProcessTests.cpp  AsyncDeadlineTests.cpp  AsyncTimerTests.cpp  CMakeLists.txt  DateTimeTests.cpp  ProcessTestHelpers.cpp  ProcessTestHelpers.hpp  ProcessTests.cpp  SyncChildProcessTests.cpp  run-tests.sh  test.sh
sdk/src/tests/: AsioRaii.hpp  CMakeLists.txt  MockLogDestination.hpp  OptionalTests.cpp  TestMain.cpp  TestMain.hpp  run-tests.sh
sdk/src/utils/: ErrorUtils.cpp  ErrorUtils.hpp  FileUtils.cpp  MutexUtils.hpp
(+75 files in other folders)
